# linkshrtnr_api

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  pnpm-lock.yaml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: docker-publish.yml
assets/: custom.css  main.css
migrations/: 0001_Create_Links_Table.sql  0001_Create_Tables.sql  0002_Create_LinkClicks_Table.sql
prisma/: schema.prisma
prisma/migrations/20231227070032_init/: migration.sql
src/: main.rs  routes.rs
src/http/: mod.rs
src/routes/: auth_routes.rs  link_routes.rs  qrcode_routes.rs  user_routes.rs  web_routes.rs
src/structs/: mod.rs
templates/: another_page.html  base.html  index.html
templates/components/: companies.html  footer.html  landing_cta.html  login_buttons.html  logo.html  navbar.html  tabs.html
templates/layouts/: base.html
templates/pages/: 404.html  another_page.html  index.html  login.html  register.html
